HolyC.output
Nonterminals useless in grammar

    body


Terminals unused in grammar

    ADDR_OF
    U0
    LOCK
    INTERN
    NL
    BINFILE


Rules useless in grammar

  347 body: stmts


State 68 conflicts: 2 shift/reduce
State 92 conflicts: 1 shift/reduce


Grammar

    0 $accept: global_stmt $end

    1 sib_ib: REGISTER
    2       | sib_ib ADD REGISTER
    3       | sib_ib ADD INT MUL REGISTER
    4       | sib_ib ADD REGISTER MUL INT
    5       | INT

    6 sib_d: sib_ib
    7      | sib_ib ADD expr
    8      | sib_ib SUB expr

    9 _sib: LEFT_SQAURE sib_d RIGHT_SQAURE

   10 sib: _sib
   11    | _expr _sib

   12 opc_operand: sib
   13            | REGISTER
   14            | _expr
   15            | TYPENAME sib
   16            | TYPENAME REGISTER COLON sib
   17            | opc_operand COLON sib

   18 opc_operands: opc_operand
   19             | opc_operands COMMA opc_operand
   20             | ε

   21 opcode: OPCODE opc_operands

   22 asm_blk_stmt: NAME DOUBLE_COLON
   23             | NAME COLON
   24             | DOUBLE_AT NAME COLON
   25             | DOUBLE_AT INT COLON

   26 data_exprs: expr
   27           | data_exprs COMMA expr

   28 asm_blk_stmt: DU8 data_exprs SEMI
   29             | DU16 data_exprs SEMI
   30             | DU32 data_exprs SEMI
   31             | DU64 data_exprs SEMI
   32             | opcode

   33 name_list: NAME
   34          | name_list COMMA NAME

   35 asm_blk_stmt: ASM_IMPORT name_list SEMI
   36             | SEMI
   37             | ALIGN INT COMMA INT

   38 asm_blk: ASM LEFT_CURLY RIGHT_CURLY

   39 asm_blk_stmts: asm_blk_stmt
   40              | asm_blk_stmts asm_blk_stmt

   41 asm_blk: ASM LEFT_CURLY asm_blk_stmts RIGHT_CURLY

   42 expr0: DOUBLE_AT NAME
   43      | DOUBLE_AT INT
   44      | FLOAT
   45      | INT
   46      | CHAR
   47      | str
   48      | LASTCLASS
   49      | NAME

   50 _callargs: ε
   51          | expr

   52 callargs: callargs COMMA _callargs
   53         | _callargs

   54 expr1: expr0
   55      | LEFT_PAREN expr_comma RIGHT_PAREN

   56 expr2: expr1
   57      | TYPENAME DOT NAME
   58      | TYPENAME ARROW NAME
   59      | expr2 DOT NAME
   60      | expr2 ARROW NAME
   61      | expr2 LEFT_SQAURE expr_comma RIGHT_SQAURE
   62      | expr2 DEC
   63      | expr2 INC
   64      | expr2 LEFT_PAREN callargs RIGHT_PAREN
   65      | expr2 LEFT_PAREN primtype0 RIGHT_PAREN
   66      | expr2 LEFT_PAREN primtype0 MUL RIGHT_PAREN
   67      | expr2 LEFT_PAREN primtype0 MUL MUL RIGHT_PAREN
   68      | expr2 LEFT_PAREN primtype0 MUL MUL MUL RIGHT_PAREN

   69 sizeof_type: primtype0
   70            | sizeof_type MUL

   71 expr3: expr2
   72      | SIZEOF NAME
   73      | SIZEOF sizeof_type
   74      | SIZEOF LEFT_PAREN expr_comma RIGHT_PAREN
   75      | SIZEOF LEFT_PAREN sizeof_type RIGHT_PAREN
   76      | BAND expr3
   77      | MUL expr3
   78      | DEC expr3
   79      | INC expr3
   80      | ADD expr3
   81      | SUB expr3
   82      | LNOT expr3
   83      | BNOT expr3

   84 expr4: expr3
   85      | expr4 POW expr4
   86      | expr4 SHL expr4
   87      | expr4 SHR expr4

   88 expr4_5: expr4
   89        | expr4_5 MUL expr4_5
   90        | expr4_5 DIV expr4_5
   91        | expr4_5 MOD expr4_5

   92 expr5: expr4_5
   93      | expr5 BAND expr5

   94 expr6: expr5
   95      | expr6 BXOR expr6

   96 expr7: expr6
   97      | expr7 BOR expr7

   98 expr8: expr7
   99      | expr8 ADD expr8
  100      | expr8 SUB expr8

  101 expr9: expr8
  102      | expr9 LT expr9
  103      | expr9 GT expr9
  104      | expr9 LE expr9
  105      | expr9 GE expr9

  106 expr10: expr9
  107       | expr10 EQ expr10
  108       | expr10 NE expr10

  109 expr11: expr10
  110       | expr11 LAND expr11

  111 expr12: expr11
  112       | expr12 LXOR expr12

  113 expr13: expr12
  114       | expr13 LOR expr13

  115 expr14: expr13
  116       | expr14 ASSIGN expr14
  117       | expr14 EQ_SHL expr14
  118       | expr14 EQ_SHR expr14
  119       | expr14 EQ_MUL expr14
  120       | expr14 EQ_DIV expr14
  121       | expr14 EQ_MOD expr14
  122       | expr14 EQ_BAND expr14
  123       | expr14 EQ_BXOR expr14
  124       | expr14 EQ_BOR expr14
  125       | expr14 EQ_ADD expr14
  126       | expr14 EQ_SUB expr14

  127 expr: expr14

  128 expr_comma: expr_comma COMMA expr
  129           | expr

  130 primtype0: TYPENAME
  131          | _class
  132          | _union
  133          | primtype0 _union
  134          | primtype0 _class

  135 _arrlit: _arrlit COMMA expr
  136        | _arrlit COMMA arrlit
  137        | expr
  138        | arrlit

  139 arrlit: LEFT_CURLY _arrlit RIGHT_CURLY
  140       | LEFT_CURLY _arrlit COMMA RIGHT_CURLY
  141       | LEFT_CURLY COMMA RIGHT_CURLY

  142 metadata: NAME expr

  143 cdecltail: cdecltail COMMA _cdecltail
  144          | _cdecltail

  145 _cdecltail: vardecltail
  146           | vardecltail metadata

  147 cdecl: primtype0 cdecltail

  148 cbody: cbody cdecl SEMI
  149      | cbody primtype0 SEMI
  150      | ε

  151 _cheader: CLASS

  152 _uheader: UNION

  153 _cheader: CLASS NAME

  154 _uheader: UNION NAME

  155 _cheader: CLASS TYPENAME

  156 _uheader: UNION TYPENAME

  157 cheader: _cheader

  158 uheader: _uheader

  159 cheader: _cheader COLON TYPENAME

  160 uheader: _uheader COLON TYPENAME

  161 _class: cheader LEFT_CURLY cbody RIGHT_CURLY

  162 _union: uheader LEFT_CURLY cbody RIGHT_CURLY

  163 tryblock: TRY scope CATCH scope

  164 namewptrs: NAME
  165          | MUL NAME
  166          | MUL MUL NAME
  167          | MUL MUL MUL NAME

  168 vardecltail: namewptrs

  169 __ptrcount: ε
  170           | MUL
  171           | MUL MUL
  172           | MUL MUL MUL

  173 vardecltail: __ptrcount LEFT_PAREN MUL NAME RIGHT_PAREN LEFT_PAREN funcargs RIGHT_PAREN
  174            | __ptrcount LEFT_PAREN MUL MUL NAME RIGHT_PAREN LEFT_PAREN funcargs RIGHT_PAREN
  175            | __ptrcount LEFT_PAREN MUL MUL MUL NAME RIGHT_PAREN LEFT_PAREN funcargs RIGHT_PAREN
  176            | vardecltail LEFT_SQAURE expr_comma RIGHT_SQAURE
  177            | vardecltail LEFT_SQAURE RIGHT_SQAURE

  178 vardecltail_asn: vardecltail ASSIGN expr
  179                | vardecltail ASSIGN arrlit

  180 single_decl: primtype0 vardecltail
  181            | primtype0 vardecltail_asn

  182 vardecltails: vardecltails COMMA vardecltails
  183             | vardecltail_asn
  184             | vardecltail

  185 multi_decl: primtype0 vardecltails

  186 funcargs: single_decl
  187         | funcargs COMMA single_decl
  188         | ε

  189 linkage: EXTERN
  190        | IMPORT
  191        | PUBLIC
  192        | STATIC
  193        | EXTERN2 NAME
  194        | IMPORT2 NAME
  195        | EXTERN2 TYPENAME
  196        | IMPORT2 TYPENAME

  197 func: primtype0 namewptrs LEFT_PAREN funcargs RIGHT_PAREN SEMI
  198     | primtype0 namewptrs LEFT_PAREN funcargs COMMA DOT_DOT_DOT RIGHT_PAREN SEMI
  199     | primtype0 namewptrs LEFT_PAREN DOT_DOT_DOT RIGHT_PAREN SEMI
  200     | linkage primtype0 namewptrs LEFT_PAREN funcargs RIGHT_PAREN SEMI
  201     | linkage primtype0 namewptrs LEFT_PAREN funcargs COMMA DOT_DOT_DOT RIGHT_PAREN SEMI
  202     | linkage primtype0 namewptrs LEFT_PAREN DOT_DOT_DOT RIGHT_PAREN SEMI
  203     | primtype0 namewptrs LEFT_PAREN DOT_DOT_DOT RIGHT_PAREN scope
  204     | primtype0 namewptrs LEFT_PAREN funcargs COMMA DOT_DOT_DOT RIGHT_PAREN scope
  205     | primtype0 namewptrs LEFT_PAREN funcargs RIGHT_PAREN scope
  206     | linkage primtype0 namewptrs LEFT_PAREN DOT_DOT_DOT RIGHT_PAREN scope
  207     | linkage primtype0 namewptrs LEFT_PAREN funcargs COMMA DOT_DOT_DOT RIGHT_PAREN scope
  208     | linkage primtype0 namewptrs LEFT_PAREN funcargs RIGHT_PAREN scope

  209 ocstmt: ostmt
  210       | cstmt

  211 expr_opt: expr_comma
  212         | ε

  213 loop_header: WHILE LEFT_PAREN expr_comma RIGHT_PAREN
  214            | FOR LEFT_PAREN expr_opt SEMI expr_opt SEMI expr_opt RIGHT_PAREN

  215 ifcl: IF LEFT_PAREN expr_comma RIGHT_PAREN

  216 ostmt: ifcl ocstmt
  217      | ifcl cstmt ELSE ostmt
  218      | loop_header ostmt

  219 cstmt: simple_stmt
  220      | ifcl cstmt ELSE cstmt
  221      | loop_header cstmt

  222 dostmt: DO ocstmt WHILE LEFT_PAREN expr_comma RIGHT_PAREN

  223 subswit: START COLON swit_body END COLON

  224 swit_body_stmt: ocstmt
  225               | DEFAULT COLON
  226               | CASE expr COLON
  227               | CASE COLON
  228               | CASE expr DOT_DOT_DOT expr COLON
  229               | subswit

  230 swit_body: swit_body swit_body_stmt
  231          | swit_body_stmt

  232 swit: SWITCH LEFT_PAREN expr_comma RIGHT_PAREN LEFT_CURLY swit_body RIGHT_CURLY
  233     | SWITCH LEFT_PAREN expr_comma RIGHT_PAREN LEFT_CURLY RIGHT_CURLY

  234 simple_stmt: tryblock

  235 opcodes: opcode SEMI
  236        | opcodes opcode SEMI

  237 simple_stmt: cheader SEMI
  238            | uheader SEMI
  239            | opcodes
  240            | asm_blk
  241            | multi_decl SEMI
  242            | linkage multi_decl SEMI
  243            | func
  244            | GOTO NAME SEMI
  245            | dostmt SEMI
  246            | expr_comma SEMI
  247            | swit
  248            | scope
  249            | BREAK SEMI
  250            | SEMI
  251            | RET expr_comma SEMI
  252            | RET SEMI
  253            | NAME COLON
  254            | primtype0 SEMI
  255            | linkage UNION NAME SEMI
  256            | linkage CLASS NAME SEMI

  257 stmts: ocstmt
  258      | stmts ocstmt
  259      | stmts error

  260 scope: LEFT_CURLY stmts RIGHT_CURLY
  261      | LEFT_CURLY RIGHT_CURLY

  262 global_stmts: ε
  263             | global_stmts ocstmt

  264 global_stmt: global_stmts
  265            | EXE scope
  266            | EVAL expr_comma
  267            | EVAL_NOCOMMA expr
  268            | DBG expr_comma

  269 _expr0: DOUBLE_AT NAME
  270       | DOUBLE_AT INT

  271 str: STRING
  272    | str STRING

  273 _expr0: FLOAT
  274       | INT
  275       | CHAR
  276       | str
  277       | LASTCLASS
  278       | NAME

  279 _expr1: _expr0
  280       | LEFT_PAREN expr_comma RIGHT_PAREN

  281 _expr2: _expr1
  282       | TYPENAME DOT NAME
  283       | TYPENAME ARROW NAME
  284       | _expr2 DOT NAME
  285       | _expr2 ARROW NAME
  286       | _expr2 DEC
  287       | _expr2 INC
  288       | _expr2 LEFT_PAREN callargs RIGHT_PAREN
  289       | _expr2 LEFT_PAREN primtype0 RIGHT_PAREN

  290 _expr3: _expr2
  291       | SIZEOF NAME
  292       | SIZEOF sizeof_type
  293       | SIZEOF LEFT_PAREN expr_comma RIGHT_PAREN
  294       | SIZEOF LEFT_PAREN sizeof_type RIGHT_PAREN
  295       | BAND _expr3
  296       | MUL _expr3
  297       | DEC _expr3
  298       | INC _expr3
  299       | ADD _expr3
  300       | SUB _expr3
  301       | LNOT _expr3
  302       | BNOT _expr3

  303 _expr4: _expr3
  304       | _expr4 POW _expr4
  305       | _expr4 SHL _expr4
  306       | _expr4 SHR _expr4

  307 _expr4_5: _expr4
  308         | _expr4_5 MUL _expr4_5
  309         | _expr4_5 DIV _expr4_5
  310         | _expr4_5 MOD _expr4_5

  311 _expr5: _expr4_5
  312       | _expr5 BAND _expr5

  313 _expr6: _expr5
  314       | _expr6 BXOR _expr6

  315 _expr7: _expr6
  316       | _expr7 BOR _expr7

  317 _expr8: _expr7
  318       | _expr8 ADD _expr8
  319       | _expr8 SUB _expr8

  320 _expr9: _expr8
  321       | _expr9 LT _expr9
  322       | _expr9 GT _expr9
  323       | _expr9 LE _expr9
  324       | _expr9 GE _expr9

  325 _expr10: _expr9
  326        | _expr10 EQ _expr10
  327        | _expr10 NE _expr10

  328 _expr11: _expr10
  329        | _expr11 LAND _expr11

  330 _expr12: _expr11
  331        | _expr12 LXOR _expr12

  332 _expr13: _expr12
  333        | _expr13 LOR _expr13

  334 _expr14: _expr13
  335        | _expr14 ASSIGN _expr14
  336        | _expr14 EQ_SHL _expr14
  337        | _expr14 EQ_SHR _expr14
  338        | _expr14 EQ_MUL _expr14
  339        | _expr14 EQ_DIV _expr14
  340        | _expr14 EQ_MOD _expr14
  341        | _expr14 EQ_BAND _expr14
  342        | _expr14 EQ_BXOR _expr14
  343        | _expr14 EQ_BOR _expr14
  344        | _expr14 EQ_ADD _expr14
  345        | _expr14 EQ_SUB _expr14

  346 _expr: _expr14


Terminals, with rules where they appear

    $end (0) 0
    error (256) 259
    CHAR (258) 46 275
    INT (259) 3 4 5 25 37 43 45 270 274
    FLOAT (260) 44 273
    DOT (261) 57 59 282 284
    ARROW (262) 58 60 283 285
    SIZEOF (263) 72 73 74 75 291 292 293 294
    ADDR_OF (264)
    LNOT (265) 82 301
    BNOT (266) 83 302
    POW (267) 85 304
    SHL (268) 86 305
    SHR (269) 87 306
    MUL (270) 3 4 66 67 68 70 77 89 165 166 167 170 171 172 173 174 175 296 308
    DIV (271) 90 309
    MOD (272) 91 310
    BAND (273) 76 93 295 312
    BOR (274) 97 316
    BXOR (275) 95 314
    ADD (276) 2 3 4 7 80 99 299 318
    SUB (277) 8 81 100 300 319
    LT (278) 102 321
    GT (279) 103 322
    LE (280) 104 323
    GE (281) 105 324
    NE (282) 108 327
    EQ (283) 107 326
    LAND (284) 110 329
    LXOR (285) 112 331
    LOR (286) 114 333
    ASSIGN (287) 116 178 179 335
    EQ_SHL (288) 117 336
    EQ_SHR (289) 118 337
    EQ_MUL (290) 119 338
    EQ_DIV (291) 120 339
    EQ_MOD (292) 121 340
    EQ_BAND (293) 122 341
    EQ_BXOR (294) 123 342
    EQ_BOR (295) 124 343
    EQ_ADD (296) 125 344
    EQ_SUB (297) 126 345
    COMMA (298) 19 27 34 37 52 128 135 136 140 141 143 182 187 198 201 204 207
    TRY (299) 163
    CATCH (300) 163
    LASTCLASS (301) 48 277
    U0 (302)
    LEFT_PAREN (303) 55 64 65 66 67 68 74 75 173 174 175 197 198 199 200 201 202 203 204 205 206 207 208 213 214 215 222 232 233 280 288 289 293 294
    RIGHT_PAREN (304) 55 64 65 66 67 68 74 75 173 174 175 197 198 199 200 201 202 203 204 205 206 207 208 213 214 215 222 232 233 280 288 289 293 294
    INC (305) 63 79 287 298
    DEC (306) 62 78 286 297
    NAME (307) 22 23 24 33 34 42 49 57 58 59 60 72 142 153 154 164 165 166 167 173 174 175 193 194 244 253 255 256 269 278 282 283 284 285 291
    LEFT_SQAURE (308) 9 61 176 177
    RIGHT_SQAURE (309) 9 61 176 177
    SEMI (310) 28 29 30 31 35 36 148 149 197 198 199 200 201 202 214 235 236 237 238 241 242 244 245 246 249 250 251 252 254 255 256
    IF (311) 215
    ELSE (312) 217 220
    DO (313) 222
    WHILE (314) 213 222
    FOR (315) 214
    LEFT_CURLY (316) 38 41 139 140 141 161 162 232 233 260 261
    RIGHT_CURLY (317) 38 41 139 140 141 161 162 232 233 260 261
    CASE (318) 226 227 228
    COLON (319) 16 17 23 24 25 159 160 223 225 226 227 228 253
    DOT_DOT_DOT (320) 198 199 201 202 203 204 206 207 228
    EXTERN2 (321) 193 195
    LOCK (322)
    EXTERN (323) 189
    IMPORT (324) 190
    IMPORT2 (325) 194 196
    ASM_IMPORT (326) 35
    STATIC (327) 192
    PUBLIC (328) 191
    CLASS (329) 151 153 155 256
    UNION (330) 152 154 156 255
    INTERN (331)
    START (332) 223
    END (333) 223
    DEFAULT (334) 225
    BREAK (335) 249
    RET (336) 251 252
    GOTO (337) 244
    SWITCH (338) 232 233
    EVAL_NOCOMMA (339) 267
    EXE (340) 265
    EVAL (341) 266
    NL (342)
    DBG (343) 268
    STRING (344) 271 272
    TYPENAME (345) 15 16 57 58 130 155 156 159 160 195 196 282 283
    OPCODE (346) 21
    REGISTER (347) 1 2 3 4 13 16
    DOUBLE_COLON (348) 22
    DOUBLE_AT (349) 24 25 42 43 269 270
    DU8 (350) 28
    DU16 (351) 29
    DU32 (352) 30
    DU64 (353) 31
    ALIGN (354) 37
    BINFILE (355)
    ASM (356) 38 41


Nonterminals, with rules where they appear

    $accept (102)
        on left: 0
    sib_ib (103)
        on left: 1 2 3 4 5
        on right: 2 3 4 6 7 8
    sib_d (104)
        on left: 6 7 8
        on right: 9
    _sib (105)
        on left: 9
        on right: 10 11
    sib (106)
        on left: 10 11
        on right: 12 15 16 17
    opc_operand (107)
        on left: 12 13 14 15 16 17
        on right: 17 18 19
    opc_operands (108)
        on left: 18 19 20
        on right: 19 21
    opcode (109)
        on left: 21
        on right: 32 235 236
    asm_blk_stmt (110)
        on left: 22 23 24 25 28 29 30 31 32 35 36 37
        on right: 39 40
    data_exprs (111)
        on left: 26 27
        on right: 27 28 29 30 31
    name_list (112)
        on left: 33 34
        on right: 34 35
    asm_blk (113)
        on left: 38 41
        on right: 240
    asm_blk_stmts (114)
        on left: 39 40
        on right: 40 41
    expr0 (115)
        on left: 42 43 44 45 46 47 48 49
        on right: 54
    _callargs (116)
        on left: 50 51
        on right: 52 53
    callargs (117)
        on left: 52 53
        on right: 52 64 288
    expr1 (118)
        on left: 54 55
        on right: 56
    expr2 (119)
        on left: 56 57 58 59 60 61 62 63 64 65 66 67 68
        on right: 59 60 61 62 63 64 65 66 67 68 71
    sizeof_type (120)
        on left: 69 70
        on right: 70 73 75 292 294
    expr3 (121)
        on left: 71 72 73 74 75 76 77 78 79 80 81 82 83
        on right: 76 77 78 79 80 81 82 83 84
    expr4 (122)
        on left: 84 85 86 87
        on right: 85 86 87 88
    expr4_5 (123)
        on left: 88 89 90 91
        on right: 89 90 91 92
    expr5 (124)
        on left: 92 93
        on right: 93 94
    expr6 (125)
        on left: 94 95
        on right: 95 96
    expr7 (126)
        on left: 96 97
        on right: 97 98
    expr8 (127)
        on left: 98 99 100
        on right: 99 100 101
    expr9 (128)
        on left: 101 102 103 104 105
        on right: 102 103 104 105 106
    expr10 (129)
        on left: 106 107 108
        on right: 107 108 109
    expr11 (130)
        on left: 109 110
        on right: 110 111
    expr12 (131)
        on left: 111 112
        on right: 112 113
    expr13 (132)
        on left: 113 114
        on right: 114 115
    expr14 (133)
        on left: 115 116 117 118 119 120 121 122 123 124 125 126
        on right: 116 117 118 119 120 121 122 123 124 125 126 127
    expr (134)
        on left: 127
        on right: 7 8 26 27 51 128 129 135 137 142 178 226 228 267
    expr_comma (135)
        on left: 128 129
        on right: 55 61 74 128 176 211 213 215 222 232 233 246 251 266 268 280 293
    primtype0 (136)
        on left: 130 131 132 133 134
        on right: 65 66 67 68 69 133 134 147 149 180 181 185 197 198 199 200 201 202 203 204 205 206 207 208 254 289
    _arrlit (137)
        on left: 135 136 137 138
        on right: 135 136 139 140
    arrlit (138)
        on left: 139 140 141
        on right: 136 138 179
    metadata (139)
        on left: 142
        on right: 146
    cdecltail (140)
        on left: 143 144
        on right: 143 147
    _cdecltail (141)
        on left: 145 146
        on right: 143 144
    cdecl (142)
        on left: 147
        on right: 148
    cbody (143)
        on left: 148 149 150
        on right: 148 149 161 162
    _cheader (144)
        on left: 151 153 155
        on right: 157 159
    _uheader (145)
        on left: 152 154 156
        on right: 158 160
    cheader (146)
        on left: 157 159
        on right: 161 237
    uheader (147)
        on left: 158 160
        on right: 162 238
    _class (148)
        on left: 161
        on right: 131 134
    _union (149)
        on left: 162
        on right: 132 133
    tryblock (150)
        on left: 163
        on right: 234
    namewptrs (151)
        on left: 164 165 166 167
        on right: 168 197 198 199 200 201 202 203 204 205 206 207 208
    vardecltail (152)
        on left: 168 173 174 175 176 177
        on right: 145 146 176 177 178 179 180 184
    __ptrcount (153)
        on left: 169 170 171 172
        on right: 173 174 175
    vardecltail_asn (154)
        on left: 178 179
        on right: 181 183
    single_decl (155)
        on left: 180 181
        on right: 186 187
    vardecltails (156)
        on left: 182 183 184
        on right: 182 185
    multi_decl (157)
        on left: 185
        on right: 241 242
    funcargs (158)
        on left: 186 187 188
        on right: 173 174 175 187 197 198 200 201 204 205 207 208
    linkage (159)
        on left: 189 190 191 192 193 194 195 196
        on right: 200 201 202 206 207 208 242 255 256
    func (160)
        on left: 197 198 199 200 201 202 203 204 205 206 207 208
        on right: 243
    ocstmt (161)
        on left: 209 210
        on right: 216 222 224 257 258 263
    expr_opt (162)
        on left: 211 212
        on right: 214
    loop_header (163)
        on left: 213 214
        on right: 218 221
    ifcl (164)
        on left: 215
        on right: 216 217 220
    ostmt (165)
        on left: 216 217 218
        on right: 209 217 218
    cstmt (166)
        on left: 219 220 221
        on right: 210 217 220 221
    dostmt (167)
        on left: 222
        on right: 245
    subswit (168)
        on left: 223
        on right: 229
    swit_body_stmt (169)
        on left: 224 225 226 227 228 229
        on right: 230 231
    swit_body (170)
        on left: 230 231
        on right: 223 230 232
    swit (171)
        on left: 232 233
        on right: 247
    simple_stmt (172)
        on left: 234 237 238 239 240 241 242 243 244 245 246 247 248 249 250 251 252 253 254 255 256
        on right: 219
    opcodes (173)
        on left: 235 236
        on right: 236 239
    stmts (174)
        on left: 257 258 259
        on right: 258 259 260
    scope (175)
        on left: 260 261
        on right: 163 203 204 205 206 207 208 248 265
    global_stmts (176)
        on left: 262 263
        on right: 263 264
    global_stmt (177)
        on left: 264 265 266 267 268
        on right: 0
    _expr0 (178)
        on left: 269 270 273 274 275 276 277 278
        on right: 279
    str (179)
        on left: 271 272
        on right: 47 272 276
    _expr1 (180)
        on left: 279 280
        on right: 281
    _expr2 (181)
        on left: 281 282 283 284 285 286 287 288 289
        on right: 284 285 286 287 288 289 290
    _expr3 (182)
        on left: 290 291 292 293 294 295 296 297 298 299 300 301 302
        on right: 295 296 297 298 299 300 301 302 303
    _expr4 (183)
        on left: 303 304 305 306
        on right: 304 305 306 307
    _expr4_5 (184)
        on left: 307 308 309 310
        on right: 308 309 310 311
    _expr5 (185)
        on left: 311 312
        on right: 312 313
    _expr6 (186)
        on left: 313 314
        on right: 314 315
    _expr7 (187)
        on left: 315 316
        on right: 316 317
    _expr8 (188)
        on left: 317 318 319
        on right: 318 319 320
    _expr9 (189)
        on left: 320 321 322 323 324
        on right: 321 322 323 324 325
    _expr10 (190)
        on left: 325 326 327
        on right: 326 327 328
    _expr11 (191)
        on left: 328 329
        on right: 329 330
    _expr12 (192)
        on left: 330 331
        on right: 331 332
    _expr13 (193)
        on left: 332 333
        on right: 333 334
    _expr14 (194)
        on left: 334 335 336 337 338 339 340 341 342 343 344 345
        on right: 335 336 337 338 339 340 341 342 343 344 345 346
    _expr (195)
        on left: 346
        on right: 11 14


State 0

    0 $accept: • global_stmt $end

    EVAL_NOCOMMA  shift, and go to state 1
    EXE           shift, and go to state 2
    EVAL          shift, and go to state 3
    DBG           shift, and go to state 4

    $default  reduce using rule 262 (global_stmts)

    global_stmts  go to state 5
    global_stmt   go to state 6


State 1

  267 global_stmt: EVAL_NOCOMMA • expr

    CHAR        shift, and go to state 7
    INT         shift, and go to state 8
    FLOAT       shift, and go to state 9
    SIZEOF      shift, and go to state 10
    LNOT        shift, and go to state 11
    BNOT        shift, and go to state 12
    MUL         shift, and go to state 13
    BAND        shift, and go to state 14
    ADD         shift, and go to state 15
    SUB         shift, and go to state 16
    LASTCLASS   shift, and go to state 17
    LEFT_PAREN  shift, and go to state 18
    INC         shift, and go to state 19
    DEC         shift, and go to state 20
    NAME        shift, and go to state 21
    STRING      shift, and go to state 22
    TYPENAME    shift, and go to state 23
    DOUBLE_AT   shift, and go to state 24

    expr0    go to state 25
    expr1    go to state 26
    expr2    go to state 27
    expr3    go to state 28
    expr4    go to state 29
    expr4_5  go to state 30
    expr5    go to state 31
    expr6    go to state 32
    expr7    go to state 33
    expr8    go to state 34
    expr9    go to state 35
    expr10   go to state 36
    expr11   go to state 37
    expr12   go to state 38
    expr13   go to state 39
    expr14   go to state 40
    expr     go to state 41
    str      go to state 42


State 2

  265 global_stmt: EXE • scope

    LEFT_CURLY  shift, and go to state 43

    scope  go to state 44


State 3

  266 global_stmt: EVAL • expr_comma

    CHAR        shift, and go to state 7
    INT         shift, and go to state 8
    FLOAT       shift, and go to state 9
    SIZEOF      shift, and go to state 10
    LNOT        shift, and go to state 11
    BNOT        shift, and go to state 12
    MUL         shift, and go to state 13
    BAND        shift, and go to state 14
    ADD         shift, and go to state 15
    SUB         shift, and go to state 16
    LASTCLASS   shift, and go to state 17
    LEFT_PAREN  shift, and go to state 18
    INC         shift, and go to state 19
    DEC         shift, and go to state 20
    NAME        shift, and go to state 21
    STRING      shift, and go to state 22
    TYPENAME    shift, and go to state 23
    DOUBLE_AT   shift, and go to state 24

    expr0       go to state 25
    expr1       go to state 26
    expr2       go to state 27
    expr3       go to state 28
    expr4       go to state 29
    expr4_5     go to state 30
    expr5       go to state 31
    expr6       go to state 32
    expr7       go to state 33
    expr8       go to state 34
    expr9       go to state 35
    expr10      go to state 36
    expr11      go to state 37
    expr12      go to state 38
    expr13      go to state 39
    expr14      go to state 40
    expr        go to state 45
    expr_comma  go to state 46
    str         go to state 42


State 4

  268 global_stmt: DBG • expr_comma

    CHAR        shift, and go to state 7
    INT         shift, and go to state 8
    FLOAT       shift, and go to state 9
    SIZEOF      shift, and go to state 10
    LNOT        shift, and go to state 11
    BNOT        shift, and go to state 12
    MUL         shift, and go to state 13
    BAND        shift, and go to state 14
    ADD         shift, and go to state 15
    SUB         shift, and go to state 16
    LASTCLASS   shift, and go to state 17
    LEFT_PAREN  shift, and go to state 18
    INC         shift, and go to state 19
    DEC         shift, and go to state 20
    NAME        shift, and go to state 21
    STRING      shift, and go to state 22
    TYPENAME    shift, and go to state 23
    DOUBLE_AT   shift, and go to state 24

    expr0       go to state 25
    expr1       go to state 26
    expr2       go to state 27
    expr3       go to state 28
    expr4       go to state 29
    expr4_5     go to state 30
    expr5       go to state 31
    expr6       go to state 32
    expr7       go to state 33
    expr8       go to state 34
    expr9       go to state 35
    expr10      go to state 36
    expr11      go to state 37
    expr12      go to state 38
    expr13      go to state 39
    expr14      go to state 40
    expr        go to state 45
    expr_comma  go to state 47
    str         go to state 42


State 5

  263 global_stmts: global_stmts • ocstmt
  264 global_stmt: global_stmts •

    CHAR        shift, and go to state 7
    INT         shift, and go to state 8
    FLOAT       shift, and go to state 9
    SIZEOF      shift, and go to state 10
    LNOT        shift, and go to state 11
    BNOT        shift, and go to state 12
    MUL         shift, and go to state 13
    BAND        shift, and go to state 14
    ADD         shift, and go to state 15
    SUB         shift, and go to state 16
    TRY         shift, and go to state 48
    LASTCLASS   shift, and go to state 17
    LEFT_PAREN  shift, and go to state 18
    INC         shift, and go to state 19
    DEC         shift, and go to state 20
    NAME        shift, and go to state 49
    SEMI        shift, and go to state 50
    IF          shift, and go to state 51
    DO          shift, and go to state 52
    WHILE       shift, and go to state 53
    FOR         shift, and go to state 54
    LEFT_CURLY  shift, and go to state 43
    EXTERN2     shift, and go to state 55
    EXTERN      shift, and go to state 56
    IMPORT      shift, and go to state 57
    IMPORT2     shift, and go to state 58
    STATIC      shift, and go to state 59
    PUBLIC      shift, and go to state 60
    CLASS       shift, and go to state 61
    UNION       shift, and go to state 62
    BREAK       shift, and go to state 63
    RET         shift, and go to state 64
    GOTO        shift, and go to state 65
    SWITCH      shift, and go to state 66
    STRING      shift, and go to state 22
    TYPENAME    shift, and go to state 67
    OPCODE      shift, and go to state 68
    DOUBLE_AT   shift, and go to state 24
    ASM         shift, and go to state 69

    $default  reduce using rule 264 (global_stmt)

    opcode       go to state 70
    asm_blk      go to state 71
    expr0        go to state 25
    expr1        go to state 26
    expr2        go to state 27
    expr3        go to state 28
    expr4        go to state 29
    expr4_5      go to state 30
    expr5        go to state 31
    expr6        go to state 32
    expr7        go to state 33
    expr8        go to state 34
    expr9        go to state 35
    expr10       go to state 36
    expr11       go to state 37
    expr12       go to state 38
    expr13       go to state 39
    expr14       go to state 40
    expr         go to state 45
    expr_comma   go to state 72
    primtype0    go to state 73
    _cheader     go to state 74
    _uheader     go to state 75
    cheader      go to state 76
    uheader      go to state 77
    _class       go to state 78
    _union       go to state 79
    tryblock     go to state 80
    multi_decl   go to state 81
    linkage      go to state 82
    func         go to state 83
    ocstmt       go to state 84
    loop_header  go to state 85
    ifcl         go to state 86
    ostmt        go to state 87
    cstmt        go to state 88
    dostmt       go to state 89
    swit         go to state 90
    simple_stmt  go to state 91
    opcodes      go to state 92
    scope        go to state 93
    str          go to state 42


State 6

    0 $accept: global_stmt • $end

    $end  shift, and go to state 94


State 7

   46 expr0: CHAR •

    $default  reduce using rule 46 (expr0)


State 8

   45 expr0: INT •

    $default  reduce using rule 45 (expr0)


State 9

   44 expr0: FLOAT •

    $default  reduce using rule 44 (expr0)


State 10

   72 expr3: SIZEOF • NAME
   73      | SIZEOF • sizeof_type
   74      | SIZEOF • LEFT_PAREN expr_comma RIGHT_PAREN
   75      | SIZEOF • LEFT_PAREN sizeof_type RIGHT_PAREN

    LEFT_PAREN  shift, and go to state 95
    NAME        shift, and go to state 96
    CLASS       shift, and go to state 61
    UNION       shift, and go to state 62
    TYPENAME    shift, and go to state 97

    sizeof_type  go to state 98
    primtype0    go to state 99
    _cheader     go to state 74
    _uheader     go to state 75
    cheader      go to state 100
    uheader      go to state 101
    _class       go to state 78
    _union       go to state 79


State 11

   82 expr3: LNOT • expr3
